@@ -9,6 +9,7 @@ Phoronix Test Suite (Git)
 - pts-core: Fix for session save path on Fedora when running as normal user
 - phoromatic: Add a public view of test results by going to result page entry -> Result Export -> Public Viewer
 - phoromatic: Add basic "Upload To OpenBenchmarking.org" link from test result page
+- phoromatic: Allow users to reset their own password by navigating to the settings page
 
 Phoronix Test Suite 5.6 Milestone 1
 13 January 2015
